--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+
+
+.glass {
+   
+    background: rgba(255, 255, 255, 0.58);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(4.7px);
+    -webkit-backdrop-filter: blur(4.7px);
+    border: 1px solid rgba(255, 255, 255, 0.14);
+}
