--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.cdnfonts.com/css/herova');
 @import "tailwindcss";
 
+html, body {
+    overflow: hidden;
+    font-family: 'Herova', sans-serif;
+}
 
 .glass {
    
@@ -9,4 +14,9 @@
     backdrop-filter: blur(4.7px);
     -webkit-backdrop-filter: blur(4.7px);
     border: 1px solid rgba(255, 255, 255, 0.14);
+}
+
+.home h1 {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+
 }
